--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-click-away-listener": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-router-dom": "6.18.0",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "framer-motion": "^10.16.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.34",
