--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
+    "react-indiana-drag-scroll": "^2.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "6.18.0",
     "swiper": "^11.0.4"
